--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "main": "./lib/apac",
   "dependencies": {
-    "xml2js": "0.4.16"
+    "xml2js": "0.4.16",
+    "xml2json": "^0.10.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
